Sat Aug  3 19:53:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/common/XML_Codecs.h:
        * ACEXML/parser/parser/Parser.h:
        * ace/Registry.h:
        * ace/String_Base.h:
        * ace/QoS/QoS_Session_Factory.h:
          Fixed doxygen commands.

Sat Aug  3 12:36:55 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Hash_Map_Manager_rt.h:
	* ace/Hash_Map_Manager_rt.cpp:
	* ace/Hash_Map_Manager_rt.i: Removed these files from the main
	  trunk. They shouldnt have been there in the first place.

Fri Aug  2 22:00:26 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* examples/Log_Msg/Log_Msg_MFC/*: Added example to show how
	  to send ACE_DEBUG output to the Microsoft Visual Studio debugger console.
	  Thanks to Don Hinton <dhinton@ieee.org> and
	  Chris Hafey <chafey@stentor.com> for help with this.

Fri Aug  2 13:10:05 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/examples/SAXPrint/main.cpp (ACE_TMAIN):
        * ACEXML/common/InputSource.cpp:

          Reverted the previous check-in with respect to the delete
          statement. Memory is getting leaked somewhere down in ACE.

Fri Aug  2 12:31:34 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/common/ContentHandler.h:
        * ACEXML/parser/parser/Entity_Manager.cpp:
        * ACEXML/common/NamespaceSupport.cpp:

          Fixed minor typos in the comments.

        * ACEXML/common/InputSource.cpp:

          Removed an erroneous delete statement. Not sure if this is a
          implementation bug or a thinko.

        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/Mem_Map_Stream.cpp:
        * ACEXML/common/Mem_Map_Stream.h:

          Use char* when sending data on the network. Technically it
          should be byte.

        * ACEXML/examples/SAXPrint/Print_Handler.cpp:
        * ACEXML/examples/SAXPrint/main.cpp:

          Fixed a bug with getopt() when WCHAR is enabled. Since EOF is