@@ -1,3 +1,15 @@
+Sat Aug  3 14:56:23 2002  Krishnakumar B  <kitty@cs.wustl.edu>
+
+        * ACEXML/common/HttpCharStream.cpp:
+
+          Fixed a conversion error from char to wchar_t. Thanks to Johnny
+          for pointing this out.
+
+        * ACEXML/parser/parser/Parser.cpp:
+
+          Fixed an unreachable statement warning. Thanks to Bala for
+          pointing this out.
+
 Sat Aug  3 19:53:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ACEXML/common/XML_Codecs.h:
